# Finance-API-Alert-System

./: .gitignore  Dockerfile  MCP_README.md  NTFY_SETUP.md  README.md  REORGANIZATION_SUMMARY.md  alert_bot.py  alert_bot_fixed.py  alert_bot_ntfy.py  alert_bot_original_backup.py  alert_bot_simple.py  config.py  demo.py  demo_fixed.py  inspect_db.py  main.py  mcp.py  ntfy_demo.py  pyproject.toml  requirements.txt  setup.py  setup_db.py  stock_alert_mcp_server.py  test_fastmcp_client.py  test_mcp_client.py  test_mcp_server.py  test_stdio_mcp.py  test_telegram.py
backups/: alert_bot_fixed.py  alert_bot_original_backup.py  alert_bot_threshold_backup.py  debug_telegram.py
demos/: __init__.py  demo.py  demo_v2.py
docker/: Dockerfile  docker-compose.yml
docs/: MCP_README.md  QUICKSTART.md
scripts/: __init__.py  setup.py
src/api_alert_system/: __init__.py
src/api_alert_system/core/: __init__.py  alert_bot.py  database.py  stock_monitor.py
src/api_alert_system/mcp/: __init__.py
src/api_alert_system/notifications/: __init__.py  console.py  ntfy.py  telegram.py
src/api_alert_system/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py  test_mcp_server.py  test_telegram.py
